main/default/objects/Internal_Resource_Session__c/Internal_Resource_Session__c.object-meta.xml
<CustomObject>
    <label>Internal Resource Session</label>
    <nameField>
        <displayFormat>IRS-{000000}</displayFormat>
        <label>Session Resource  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Resource Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>