main/default/objects/Internal_Resource_Session__c/fields/Calendar_Invite_Sent_to_Resource__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Invite_Sent_to_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Invite Sent to Resource</label>
    <type>Checkbox</type>
</CustomField>