main/default/objects/Internal_Resource_Session__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Internal Resource Sessions</relationshipLabel>
    <relationshipName>Internal_Resource_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>