main/default/objects/Internal_Resource_Session__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Internal Resource Sessions</relationshipLabel>
    <relationshipName>Internal_Resource_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>