main/default/objects/Internal_Resource_Session__c/fields/Is_Eligible_For_Calendar_Invite__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_For_Calendar_Invite__c</fullName>
    <formula>OR(
    AND(
        TEXT(Resource_Session_Status__c) = &apos;Registered&apos;, 
        TEXT(Event__r.Resource_Calendar_Invite_Delivery__c) = &apos;Send on session registration&apos;
    ),
    AND(
        TEXT(Resource_Session_Status__c) = &apos;Confirmed&apos;, 
        TEXT(Event__r.Resource_Calendar_Invite_Delivery__c) = &apos;Send on session confirmation&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Eligible For Calendar Invite</label>
    <type>Checkbox</type>
</CustomField>