main/default/objects/Internal_Resource_Session__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Resource Number</label>
    <referenceTo>Internal_Resource__c</referenceTo>
    <relationshipLabel>Internal Resource Sessions</relationshipLabel>
    <relationshipName>Internal_Resource_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>