main/default/objects/Internal_Resource_Session__c/fields/Resource_Confirmed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resource_Confirmed_Date_Time__c</fullName>
    <label>Resource Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>