main/default/objects/Internal_Resource_Session__c/fields/Resource_Declined_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resource_Declined_Date_Time__c</fullName>
    <label>Resource Declined Date/Time</label>
    <type>DateTime</type>
</CustomField>