main/default/objects/Internal_Resource_Session__c/fields/Resource_Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resource_Registration_Date_Time__c</fullName>
    <label>Resource Registration Date/Time</label>
    <type>DateTime</type>
</CustomField>