main/default/objects/Internal_Resource_Session__c/fields/Resource_Session_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Session_Role__c</fullName>
    <label>Resource Session Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>