main/default/objects/Internal_Resource_Session__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Internal Resource Sessions</relationshipLabel>
    <relationshipName>Internal_Resource_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>