main/default/objects/Internal_Resource_Session__c/fields/Session_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Date__c</fullName>
    <formula>Session__r.Start_Date_Time__c</formula>
    <label>Session Start Date</label>
    <type>DateTime</type>
</CustomField>